force-app/main/default/objects/Import_d_encaissement__c/Import_d_encaissement__c.object-meta.xml
<CustomObject>
    <label>Import d&apos;encaissement</label>
    <nameField>
        <label>Import d&apos;encaissement  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Import d&apos;encaissements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>