force-app/main/default/objects/Import_d_encaissement__c/fields/Nombre_de_transactions_traitees__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_transactions_traitees__c</fullName>
    <label>Nombre de transactions traitées</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>