force-app/main/default/objects/Import_d_encaissement__c/fields/Type_d_encaissement__c.field-meta.xml
<CustomField>
    <fullName>Type_d_encaissement__c</fullName>
    <label>Type d&apos;encaissement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>TIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>